--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,9 +2,10 @@
 
 
 <div class="head"> 
-<button type="button" class="shop"> SHOP NOW  </button>
 
 
+
+ <button type="button" class="shop"> SHOP NOW </button>
 </div> 
 
 </br>
@@ -26,7 +27,11 @@ Compassion for the world starts with compassion for myself.</br>
 </br>
 
 <div class="collage"> 
-PHOTO COLLEGE WITH LINKS GO HERE
+
+<%=image_tag("http://i.imgur.com/gO9CVhc.png?1")%>
+
+
+
 </div>
 
 </br>
