--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -15,9 +15,9 @@
 <table style="width:75%" class="products-table" align="center">
 
   <tr>
-    <td> <img src="http://i.imgur.com/XbcjBbL.png?1">  </br> Something Bra </br> $39.00 </td>
-    <td> <img src="http://i.imgur.com/pxYDv41.png?1">  </br> Something Bra </br> $39.00</td>
-    <td> <img src="http://i.imgur.com/XbcjBbL.png?1">  </br> Something Bra </br> $39.00</td>
+    <td> <img src="http://i.imgur.com/QiNjY8U.jpg?1">  </br> Something Bra </br> $39.00 </td>
+    <td> <img src="http://i.imgur.com/jgZgreL.jpg?1">  </br> Something Bra </br> $39.00</td>
+    <td> <img src="http://i.imgur.com/byMyEIL.jpg?1">  </br> Something Bra </br> $39.00</td>
     
   </tr>
   <tr>
