--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,6 +16,8 @@
 
 body {
     font-family: 'Crimson Text', serif;
+    font-size: 14px;
+    color: black;
 }
 
 .about {
@@ -42,15 +44,13 @@ body {
 
 .cart {
     align-content: right;
-    padding-right: 100px;
+    padding-right: 250px;
+    padding-top: 30px;
     float: right;
+    position: relative;
+    z-index: 100;
+
 }
-
-.cart:hover {
-
-}
-
-
 
 td:hover img {
     opacity: .5;
@@ -60,10 +60,13 @@ td:hover img {
 .navbar-text {
     text-align: center;
     font-family: 'Crimson Text', serif;
+    font-size: 20px;
 }
 
 .navbar-brand {
-    padding-top: 50px;
+    bottom: 400px;
+
+
 }
 
 .order-table {
@@ -91,7 +94,7 @@ th {
     width: 200px;
 }
 
-.shop {
+button.shop {
     background-color: black;
     color: white;
     font-family: 'Crimson Text', serif;
@@ -101,10 +104,18 @@ th {
     position: absolute;
     right: 40px;
     bottom: 80px;
-
-    
-
 }
+
+button.story {
+    background-color: black;
+    color: white;
+    font-family: 'Crimson Text', serif;
+    border: none;
+    padding: 20px;
+    width: 200px;
+  
+}
+
 
 div.head {
     background-color: yellow;
@@ -114,6 +125,7 @@ div.head {
     padding-bottom: 40px;
     background-image: url("http://i.imgur.com/0gXWDN3.png?1");
     position: relative;
+
 
 }
 
@@ -129,17 +141,29 @@ div.motto {
     font-size: 24px;
 }
 
-div.collage {
+#collage {
     background-color: blue;
     width: 1000px;
+    height: 600px;
     margin: 0 auto;
     padding: 40px 0;
     border: .5px solid #696969;
+    line-height: 0;
+    -webkit-column-count: 5;
+    -webkit-column-gap: 0px;
+    -moz-column-count: 5;
+    -moz-column-gap: 0px;
+    column-count: 5;
+    column-gap: 0px;  
+
 }
 
+
+
+
 div.subscribe {
-    background-color: purple;
-    width: 1200px;
+    width: 1000px;
+    height: 200px;
     margin: 0 auto;
     padding-top: 40px;
     border: .5px solid #696969;
@@ -152,3 +176,49 @@ div.subscribe {
     font-family: 'Crimson Text', serif;
 }
 
+a:visited {
+    text-decoration: none; color:black;
+}
+a:hover {
+    text-decoration: none;
+}
+
+h3 {
+    
+    font-size: 24px;
+    margin: 80px 169px;
+
+}
+
+.form-group {
+    font-family: 'Crimson Text', serif;
+    font-size: 16px;
+    display: -webkit-inline-box;
+
+}
+
+
+.text-center{
+    font-size: 20px;
+    font-family: 'Crimson Text', serif;
+}
+
+#singlebutton {
+    background-color: black;
+    color: white;
+    font-family: 'Crimson Text', serif;
+    border: none;
+    
+
+}
+
+button:hover {
+    background-color: white;
+    color: black;
+}
+
+
+p.social {
+    font-size: 20px;
+    
+}
