--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,6 +1,20 @@
 
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Document</title>
+</head>
+<body>
+
+<p>
+
 <h3> Shopping Cart </h3>
 
+</p>
 
 <table class="order-table">
   <thead>
@@ -39,12 +53,11 @@
     </tfoot>
 </table>
 
-
-
-
 </br>
 
 </br>
 
 <%= link_to "continue shopping", products_path %>
-<p>
+
+</body>
+</html>
