--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,18 +12,18 @@
   </head>
 
   <body>
-
+<nav class="navbar-brand">
+  <%= link_to root_path do %>
+  <img alt="Brand" src="http://i.imgur.com/mtLq4Hz.png">
+  <% end %>
+  </nav>
     <nav class="navbar-text">
       <%=link_to "Shop All", products_path%> 
       &nbsp;&nbsp;|&nbsp;&nbsp;
       <%=link_to "Our Story", page_path("about") %>
     </nav>
 
-<div class="brand">
-    <%= link_to root_path do %>
-    <img alt="Brand" src="http://i.imgur.com/mtLq4Hz.png">
-  <% end %>
-  </div>
+
 
     <div class="cart">
     <%= link_to orders_path do %>
