--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -14,7 +14,7 @@
 
 <div class="about">
 
-<h3>WHO NUXACTIVE IS AS A COMPANY</h3>
+<h3>WHO NUXACTIVE IS AS A COMPANY?</h3>
 
 NUXactive celebrates women. Women who exude confidence with effortless style. 
 Women who are intelligent and socially refined. Women who inspire both younger and older generations. 
@@ -34,7 +34,7 @@ Email us at: inspired@nuxactive.com
 
 <div class="about">
 
-<h3> WHAT NUXACTIVE OFFERS AS A PRODUCT </h3>
+<h3> WHAT NUXACTIVE OFFERS AS A PRODUCT? </h3>
 
 NUXactive offers a choice of activewear for discerning, 
 intelligent consumers. Its quality manufacture and stylish design is well-considered for both form and function. NUXactive 
