--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -10,10 +10,10 @@
 <body>
 
 <table class="categories" align="center">
-    <td><%= link_to "All"%>&nbsp;&nbsp;|&nbsp;&nbsp;</td>
-    <td><%= link_to "Bras" %>&nbsp;&nbsp;|&nbsp;&nbsp;</td>
-    <td><%= link_to "Leggings" %>&nbsp;&nbsp;|&nbsp;&nbsp;</td>
-    <td><%= link_to "Outerwear" %></td>
+    <td><%= link_to "All", products_path %>&nbsp;&nbsp;|&nbsp;&nbsp;</td>
+    <td><%= link_to "Bras", products_bras_path %>&nbsp;&nbsp;|&nbsp;&nbsp;</td>
+    <td><%= link_to "Leggings", products_leggings_path %>&nbsp;&nbsp;|&nbsp;&nbsp;</td>
+    <td><%= link_to "Outerwear", products_outerwear_path %></td>
     
 </table>
 
