--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -40,6 +40,7 @@ body {
     position: center;
     padding: 20px;
     font-family: 'Crimson Text', serif;
+    
 }
 
 .cart {
@@ -52,10 +53,6 @@ body {
 
 }
 
-td:hover img {
-    opacity: .5;
-	
-}
 
 .navbar-text {
     text-align: center;
@@ -106,6 +103,8 @@ button.shop {
     right: 40px;
     bottom: 80px;
 }
+
+
 
 button.story {
     background-color: black;
@@ -176,10 +175,19 @@ div.subscribe {
 
 a:visited {
     text-decoration: none; color:black;
+
 }
 a:hover {
+    text-decoration: underline;
+}
+
+a {
     text-decoration: none;
 }
+
+/* :hover img {
+    opacity: .5;
+} */
 
 h3 {
     
@@ -192,9 +200,8 @@ h3 {
     font-family: 'Crimson Text', serif;
     font-size: 16px;
     display: -webkit-inline-box;
-
+    
 }
-
 
 .text-center{
     font-size: 20px;
@@ -213,10 +220,36 @@ h3 {
 button:hover {
     background-color: white;
     color: black;
+    border-style: solid;
+
 }
 
 
 p.social {
     font-size: 20px;
     
+}
+
+.cartbutton {
+    background-color: black;
+    color: white;
+    font-family: 'Crimson Text', serif;
+    border: none;
+    padding: 5px;
+    width: 100px;
+
+}
+
+.checkout_button {
+    background-color: black;
+    color: white;
+    font-family: 'Crimson Text', serif;
+    border: none;
+    padding: 5px;
+    width: 100px;
+}
+
+
+i:active {
+    color: none;
 }
