--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,8 @@
-<h3> Create an Account </h3> 
 
+
+<div class="form">
+
+<h3> Create an Account </h3> 
 
 <%= form_for @user do |f| %>
   <% if @user.errors.any? %>
@@ -30,3 +33,5 @@
   </div>
   <div class="actions"><%= f.submit %></div>
 <% end %>
+
+</div> 
