--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -55,7 +55,7 @@ Compassion for the world starts with compassion for myself.</br>
 <div class="container">
 	<form class="form-horizontal">
 
-<legend class="text-center">Subscribe To The Nux Active Newsletter!</legend>
+<p class="social">Subscribe To The Nux Active Newsletter!</p>
 
 <div class="form-group">
   <label class="col-md-4 control-label" for="textinput">Your E-mail Address: </label>  
@@ -64,7 +64,7 @@ Compassion for the world starts with compassion for myself.</br>
   <input id="textinput" name="textinput" type="text" placeholder="E-mail" class="form-control input-md" required="">
   &nbsp;
 
-  </div>
+</div>
 
 <div class="form-group">
   <div class="col-md-4">
@@ -75,8 +75,12 @@ Compassion for the world starts with compassion for myself.</br>
 </form>
 </div>
 
+</br>
+
+
+
 <p class="social">
-<%= link_to "Follow Us On Instagram!", "https://www.instagram.com/nuxactive/?hl=en" %>
+<%= link_to "Follow @nuxactive On Instagram!", "https://www.instagram.com/nuxactive/?hl=en" %>
 </p>
 </div>
 
