--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -17,14 +17,21 @@
     <% @order.order_items.each do |item| %>
       <tr>
         <td><img src="<%= item.product.img_url %>" height="100"> </br> <%= item.product.name %> </td>
-        <td><%= item.quantity %></br></td> 
+        <td>
+
+          <%= link_to "+", increase_path(item) if current_user && @order.is_cart %>
+          <%= item.quantity %>
+          <%= link_to "-", decrease_path(item) if current_user && @order.is_cart %>
+        </td> 
         <td>$<%= item.product.price %></td>
         <td align="right">$<%= item.product.price * item.quantity %></td>
       </tr>
       <% total += (item.product.price * item.quantity) %>
     <% end %>
       <tr><td colspan="3"></td><td align="right">Cart Total:&nbsp;&nbsp; $<%= total %></td></tr><% end %>
-      <tr><td colspan="3"></td><td align="right"><%= link_to checkout_path do %><button type="button" class="checkout_button">CHECKOUT</button><% end %></td></tr>
+      <tr><td colspan="3"></td><td align="right">
+        <% if @order.is_cart && @order.order_items.count > 0 %><%= link_to checkout_path do %><button type="button" class="checkout_button">CHECKOUT</button><% end %><% end %>
+      </td></tr>
   </tbody>
 </table>
 
