--- a/app/views/products/bras.html.erb
+++ b/app/views/products/bras.html.erb
@@ -9,6 +9,26 @@
     
 </table>
 
-<p>
+<table style="width:75%" class="products-table" align="center">
 
-</p>
+  <% if @products.categories == "bra" %>
+  <% @products.each do |product| %> 
+
+    <tr>
+      <td>
+      <% if current_user && current_user.admin == true %>
+          <%= link_to "-", product_path(product), method: :delete, data: { confirm: "are you sure?" }%>
+      <% end %>
+      <img src="<%= product.img_url %>"></br></td>
+      <td><%= product.name %></br></td> 
+      <td>$<%= product.price %></td>
+      <td>
+        <% if current_user %> <%= link_to product_order_items_path(product), method: :post do %>
+          <button type="button" class="cartbutton"> ADD TO CART </button>
+        <% end %>
+      </td>
+    </tr>
+  <% end %>
+  <% end %>
+
+  <% end %>
