--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -3,9 +3,9 @@
 
 <table class="categories" align="center">
     <td><%= link_to "All", products_path %>&nbsp;&nbsp;|&nbsp;&nbsp;</td>
-    <td><%= link_to "Bras", products_bras_path %>&nbsp;&nbsp;|&nbsp;&nbsp;</td>
-    <td><%= link_to "Leggings", products_leggings_path %>&nbsp;&nbsp;|&nbsp;&nbsp;</td>
-    <td><%= link_to "Outerwear", products_outerwear_path %></td>
+    <td><%= link_to "Bras", "/products?category=bra" %>&nbsp;&nbsp;|&nbsp;&nbsp;</td>
+    <td><%= link_to "Leggings", "/products?category=legging"%>&nbsp;&nbsp;|&nbsp;&nbsp;</td>
+    <td><%= link_to "Outerwear", "/products?category=outerwear"%></td>
     
 </table>
 
