--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -37,13 +37,32 @@ Compassion for the world starts with compassion for myself.</br>
 
 <div id="collage"> 
 
-<%=image_tag("http://i.imgur.com/byMyEIL.jpg?1")%>
-<%=image_tag("http://i.imgur.com/mGyQp42.jpg?1")%>
-<%=image_tag("http://i.imgur.com/3ujalSR.jpg?1")%>
-<%=image_tag("http://i.imgur.com/6jrlqoV.jpg?1")%>
-<%=image_tag("http://i.imgur.com/iCBf89P.jpg?1")%>
 
+<img src="http://i.imgur.com/2RrGRop.jpg">
+<img src="http://i.imgur.com/eeyF8sY.jpg">
+<img src="http://i.imgur.com/hpnqnBG.jpg">
 
+<img src="http://i.imgur.com/6jrlqoV.jpg?1">
+<img src="http://i.imgur.com/iCBf89P.jpg?1">
+<img src="http://i.imgur.com/32NbRHW.jpg">
+<img src="http://i.imgur.com/1BJYBh0.jpg">
+<img src="http://i.imgur.com/VpUYHma.jpg">
+<img src="http://i.imgur.com/uHa8pJC.jpg">
+<img src="http://i.imgur.com/tzM9s4r.jpg">
+<img src="http://i.imgur.com/aJHOGTk.jpg">
+<img src="http://i.imgur.com/U7QNXKw.jpg">
+<img src="http://i.imgur.com/rJtcsdu.jpg?1">
+<img src="http://i.imgur.com/Eu0Y8ML.jpg">
+<img src="http://i.imgur.com/gn7DiCp.jpg">
+<img src="http://i.imgur.com/umh0b5i.jpg">
+<img src="http://i.imgur.com/3V5OFYI.jpg">
+<img src="http://i.imgur.com/WG51WZT.jpg">
+<img src="http://i.imgur.com/EmP6Sln.jpg">
+<img src="http://i.imgur.com/2sNSRoZ.jpg">
+<img src="http://i.imgur.com/YvXNQ0Y.jpg">
+<img src="http://i.imgur.com/CGuIYOZ.jpg">
+<img src="http://i.imgur.com/PBjaAw5.jpg">
+<img src="http://i.imgur.com/cccUY65.jpg">
 
 </div>
 
