--- a/app/views/pages/congrats.html.erb
+++ b/app/views/pages/congrats.html.erb
@@ -1,3 +1,29 @@
-CONGRATS
+
+
+
+
+<div class="congrats">
+<h3> CONGRATS!</h3>
+
+<p id="congrats">Thank You! Your order has been completed. </br>
+You will recieve and email confirmation shortly with shipping information.
+</p>
+
+</br>
+</br>
+</br>
+
+
+
+
+<%= link_to products_path do %>
+   <button type="button" id="congrats-btn"> BACK TO SHOPPING </button> 
+<% end %>
+
+</div>
+
+
+
+
 
 
