--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -21,63 +21,57 @@ body {
 }
 
 .about {
+    font-family: 'Crimson Text', serif;
     width: 75%;
     margin: 0 auto;
-    font-family: 'Crimson Text', serif;
     background-color: #E0E0E0;
     text-align: center;
     font-size: 16px;
-    
 }
 
 
 .products-table {
+    font-family: 'Crimson Text', serif;
     text-align: center;
     position: center;
-    font-family: 'Crimson Text', serif;
     border-spacing: 50px;
 }
 
 .categories {
-    text-align: center;
-    position: center;
-    padding: 20px;
     font-family: 'Crimson Text', serif;
-    
+    text-align: center;
+    padding: 20px;
 }
 
 .cart {
     align-content: right;
     padding-right: 250px;
     padding-top: 50px;
-    float: right;
-    position: relative;
+    position: absolute;
+    left: 1150px;
     z-index: 100;
-
 }
 
 
 .navbar-text {
-    text-align: center;
     font-family: 'Crimson Text', serif;
     font-size: 20px;
+    text-align: center;
 }
 
 .navbar-brand {
-    bottom: 400px;
+    bottom: 500px;
     margin-bottom: 0px;
-
-
+    
 }
 
 .order-table {
-    width: 80%;
-    margin: 0 auto;
-    text-align: left;
-    font-size: 20px;
-    border-spacing: 30px;
     font-family: 'Crimson Text', serif;
-
+    font-size: 20px;
+    width: 80%;
+    text-align: left;
+    margin: 0 auto;
+    border-spacing: 30px;
 }
 
 .order-table:hover {
@@ -85,71 +79,64 @@ body {
 }
 
 th {
-    color: gray;
-    font-size: 12px;
     font-family: 'Crimson Text', serif;
+    font-size: 12px;
+    color: gray;
 }
 
 .secondary {
-    background-color: black;
-    color: white;
     font-family: 'Crimson Text', serif;
+    color: white;
+    background-color: black;
     border: none;
     padding: 10px;
     width: 200px;
 }
 
 button.shop {
-    background-color: black;
-    color: white;
     font-family: 'Crimson Text', serif;
-    border: none;
-    padding: 20px;
-    width: 200px;
+    color: white;
+    background-color: black;
     position: absolute;
     right: 40px;
     bottom: 80px;
-}
-
-
-
-button.story {
-    background-color: black;
-    color: white;
-    font-family: 'Crimson Text', serif;
     border: none;
     padding: 20px;
     width: 200px;
-  
+}
+
+button.story {
+    font-family: 'Crimson Text', serif;
+    color: white;
+    background-color: black;
+    border: none;
+    padding: 20px;
+    width: 200px;
 }
 
 
 div.head {
-    width: 1000px;
+    background-image: url("http://i.imgur.com/0gXWDN3.png?1");
     height: 380px;
     margin: 0 auto;
-    padding-bottom: 40px;
-    background-image: url("http://i.imgur.com/0gXWDN3.png?1");
     position: relative;
-
-
+    padding-bottom: 40px;
+    width: 1000px;
 }
 
-
-
 div.motto {
+    font-size: 24px;
+    text-align: center;
     background-color: white;
-    width: 1000px;
+    border: .5px solid #696969;
     margin: 0 auto;
     padding: 40px 0;
-    border: .5px solid #696969;
-    text-align: center;
-    font-size: 24px;
+    width: 1000px;
 }
 
 #collage {
+    height: 460px;
     width: 1000px;
-    height: 500px;
     margin: 0 auto;
     box-sizing: content-box;
     border: .5px solid #696969;
@@ -160,7 +147,6 @@ div.motto {
     -moz-column-gap: 0px;
     column-count: 6;
     column-gap: 0px;  
-
 }
 
 #collage img {
@@ -170,18 +156,18 @@ div.motto {
 
 
 div.subscribe {
-    width: 1000px;
     height: 200px;
+    border: .5px solid #696969;
     margin: 0 auto;
     padding-top: 40px;
-    border: .5px solid #696969;
+    width: 1000px;
 }
 
 
 .nuxology {
+    font-family: 'Crimson Text', serif;
     font-size: 40px;
     margin: 0 auto;
-    font-family: 'Crimson Text', serif;
 }
 
 a:visited {
@@ -202,40 +188,34 @@ img:hover {
 
 
 h3 {
-    
     font-size: 24px;
-    margin: 80px 169px;
-
+    margin: 80px, 169px;
 }
 
 .form-group {
     font-family: 'Crimson Text', serif;
     font-size: 16px;
     display: -webkit-inline-box;
-    
 }
 
 .text-center{
-    font-size: 20px;
     font-family: 'Crimson Text', serif;
+    font-size: 20px;
 }
 
 #singlebutton {
-    background-color: black;
-    color: white;
     font-family: 'Crimson Text', serif;
+    color: white;
+    background-color: black;
     border: none;
-    
-
 }
 
 button:hover {
-    background-color: white;
     color: black;
+    background-color: white;
     border-style: solid;
 
 }
-
 
 p.social {
     font-size: 20px;
@@ -244,30 +224,24 @@ p.social {
 }
 
 .cartbutton {
-    background-color: black;
-    color: white;
     font-family: 'Crimson Text', serif;
+    color: white;
+    background-color: black;
     border: none;
     padding: 5px;
     width: 100px;
+    
 
 }
 
 .checkout_button {
-    background-color: black;
-    color: white;
     font-family: 'Crimson Text', serif;
+    color: white;
+    background-color: black;
     border: none;
     padding: 5px;
     width: 100px;
 }
-
-
-i:active {
-    color: none;
-}
-
-
 
 .container {
     text-align: center;
@@ -284,24 +258,38 @@ p#congrats {
 
 }
 
-#congrats-btn {
-    background-color: black;
-    color: white;
+#shop {
     font-family: 'Crimson Text', serif;
+    color: white;
+    background-color: black;
+    border: none;
+    margin: 0 auto;
+    padding: 10px;
+    width: 200px;
+}
+
+#congrats-btn {
+    font-family: 'Crimson Text', serif;
+    color: white;
+    background-color: black;
     border: none;
     padding: 10px;
     width: 200px;
 }
 
 #congrats-btn:hover {
-    background-color: white;
     color: black;
+    background-color: white;
     border-style: solid;
 
 }
 
 .form {
-    text-align: center;
     font-family: 'Crimson Text', serif;
+    text-align: center;
     
+}
+
+i:active {
+    color: none;
 }
