--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -36,7 +36,9 @@
   </tbody>
 </table>
 
-<%= link_to "continue shopping", products_path %>
+<%= link_to orders_path do %>
+   <button type="button" id="shop"> PREVIOUS ORDERS </button> 
+<% end %>
 
 </body>
 
