finishing touches to site

--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,4 +1,4 @@
-<h3>Previous Bags</h3>
+<h3 class"previous-bag">Previous Bags</h3>
 
 <table class="order-table">
 <tbody>
@@ -16,7 +16,7 @@
 </table>
 
 <%= link_to products_path do %>
-   <button type="button" class="cartbutton"> BACK TO SHOPPING </button> 
+   <button type="button" class="shopping-button"> BACK TO SHOPPING </button> 
 <% end %>
 </body>
 
