--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -192,6 +192,10 @@ h3 {
     margin: 80px, 169px;
 }
 
+.previous-bag {
+    align-content: center;
+}
+
 .form-group {
     font-family: 'Crimson Text', serif;
     font-size: 16px;
@@ -230,8 +234,6 @@ p.social {
     border: none;
     padding: 5px;
     width: 100px;
-    
-
 }
 
 .checkout_button {
@@ -258,15 +260,6 @@ p#congrats {
 
 }
 
-#shop {
-    font-family: 'Crimson Text', serif;
-    color: white;
-    background-color: black;
-    border: none;
-    margin: 0 auto;
-    padding: 10px;
-    width: 200px;
-}
 
 #congrats-btn {
     font-family: 'Crimson Text', serif;
@@ -319,4 +312,16 @@ i:active {
     position: relative;
     right: 22px;
 
+}
+
+.shopping-button {
+    font-family: 'Crimson Text', serif;
+    color: white;
+    background-color: black;
+    border: none;
+    padding: 5px;
+    width: 200px;
+    position: relative;
+    left: 610px;
+    
 }
