--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -14,23 +14,23 @@
       </ul>
     </div>
   <% end %>
-  <div class="field">
-    <%= f.label :name %>
-    <%= f.text_field :name %>
-  </div>
-  <div class="field">
-    <%= f.label :price %>
-    <%= f.text_field :price %>
-  </div>
-  <div class="field">
-    <%= f.label :img_url %>
-    <%= f.text_field :img_url %>
-  </div>
-  <div class="field">
+  <div class="field add-category">
     <%= f.label :category %>
     <%= f.select :category, options_for_select([['bra'], ['legging'], ['outerwear']], params[:category]) %>
   </div>
-  <div class="field">
+  <div class="field add-username">
+    <%= f.label :name %>
+    <%= f.text_field :name %>
+  </div>
+  <div class="field add-price">
+    <%= f.label :price %>
+    <%= f.text_field :price %>
+  </div>
+  <div class="field upload-img">
+    <%= f.label :img_url %>
+    <%= f.text_field :img_url %>
+  </div>
+  <div class="field add-description">
     <%= f.label :description %>
     <%= f.text_field :description %>
   </div>
